[gd_scene load_steps=12 format=3 uid="uid://bwg6odu23tffb"]

[ext_resource type="Script" uid="uid://b41ypaox0ya2w" path="res://UI/player_hud.gd" id="1_dpci0"]
[ext_resource type="Texture2D" uid="uid://de8sssbmscsvl" path="res://UI/Assets/crosshair161.png" id="1_pi8qp"]
[ext_resource type="FontFile" uid="uid://c8m6i4invtyrb" path="res://UI/Fonts/Darinia.ttf" id="2_5o0p8"]
[ext_resource type="AudioStream" uid="uid://cnpmg7wvgi2vu" path="res://Audio/doctor sane i guess.mp3" id="4_lhy1a"]

[sub_resource type="Gradient" id="Gradient_x57b6"]
colors = PackedColorArray(0, 0, 0, 0.3882353, 0, 0, 0, 0.1882353)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_pi8qp"]
gradient = SubResource("Gradient_x57b6")
width = 250
height = 35

[sub_resource type="Gradient" id="Gradient_5o0p8"]
colors = PackedColorArray(0, 0.40455505, 0, 1, 0.3721148, 0.7604518, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_dpci0"]
gradient = SubResource("Gradient_5o0p8")
width = 250
height = 35

[sub_resource type="Animation" id="Animation_fneal"]
resource_name = "intro"
length = 240.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Interact_Container/SubtitlesLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3.0333333, 7.320638, 12.393399, 24.633333, 31.042765, 36.18425, 39.752434, 42.123177, 50.919872, 56.933334, 62.2, 66.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": ["To Puppet...", "my greatest accomplishment", "my only friend, my personal servant", "my greatest disappointment, my ultimate weapon
", "If you're hearing this, it means that my body has been destroyed.

", "No doubt by that madman across the street.

", "I know, very sad.

", "But do not fear, Puppet,

", "for in my genius, I foresaw this eventuality years ago

", "Set a plan in motion

", "the culmination of which will be my rebirth and the

", "DAWN OF MY IMMORTALITY!

", "STEIN WILL RUE THE DAY

"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DialogPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_pmtv2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Interact_Container/SubtitlesLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [""]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DialogPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_miyt4"]
_data = {
&"RESET": SubResource("Animation_pmtv2"),
&"intro": SubResource("Animation_fneal")
}

[node name="PlayerHud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_dpci0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(300, 100)
layout_mode = 1
offset_left = 25.0
offset_top = 20.0
offset_right = 325.0
offset_bottom = 120.0
theme_override_constants/separation = 5

[node name="TextureProgressBar" type="TextureProgressBar" parent="VBoxContainer"]
visible = false
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
value = 50.0
texture_under = SubResource("GradientTexture2D_pi8qp")
texture_progress = SubResource("GradientTexture2D_dpci0")
tint_over = Color(0.77925295, 0.0019144488, 0.94370335, 1)
tint_progress = Color(1.8770993e-06, 0.6848109, 0.37219253, 1)

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.5254902)
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_pi8qp")
expand_mode = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(300, 300)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="Label" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5o0p8")
theme_override_font_sizes/font_size = 32
text = "Objectives:"

[node name="CheckBox" type="CheckBox" parent="VBoxContainer2"]
layout_mode = 2
text = "Do this"

[node name="Interact_Container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -47.0
offset_top = -104.0
offset_right = 52.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 0

[node name="SubtitlesLabel" type="Label" parent="Interact_Container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5o0p8")
theme_override_font_sizes/font_size = 24

[node name="InteractLabel" type="Label" parent="Interact_Container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5o0p8")
theme_override_font_sizes/font_size = 24

[node name="DialogAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_miyt4")
}

[node name="DialogPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_lhy1a")
volume_db = -5.0
bus = &"Effects"
